fix card text to be pre-wrap

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,8 @@
 }
 
 #path_content {
-	white-space: pre;
+	white-space: pre-wrap;
+
 }
 
 #chart_container {
